# lab3_etc

lab3/ex01/SummFullName/: package.xml  setup.py
lab3/ex01/SummFullName/SummFullName/: .service_name.py.swp  client_name.py  service_name.py
lab3/ex01/fullNameMessage/msg/: Fullnamemessage.msg
lab3/ex02/action_turtle_commands/: package.xml  setup.py
lab3/ex02/action_turtle_commands/action_turtle_commands/: action_turtle_client.py  action_turtle_server.py
lab3/ex02/actions/: CMakeLists.txt  package.xml
lab3/ex03/: pose_speed_x1.yaml  pose_speed_x2.yaml
lab3/ex03/turtle_cmd_vel.mcap/: metadata.yaml  turtle_cmd_vel.mcap_0.db3
lab3/ex05/move_to_goal/: package.xml  setup.py
lab3/ex05/move_to_goal/move_to_goal/: move_to_goal.py
lab4/ex01/: last_transform.txt  transform.txt
lab4/ex02/ex02/: package.xml  setup.cfg
lab4/ex02/ex02/ex02/: turtle2_tf2_listener.py
lab4/ex02/ex02/launch/: turtlesim_with_carrot.launch.py
lab4/ex03/ex02/: package.xml  setup.py
lab4/ex03/ex03/: package.xml  setup.cfg  setup.py
lab4/ex03/ex03/launch/: turtle_time_travel.launch.py
lab5/ex01/: robot.urdf  robot_display.launch.py
lab5/ex02/: robot.urdf.xacro  robot_display.launch.py
lab5/ex04/movement/: setup.py
lab5/ex04/movement/movement/: movement.py
lab5/ex04/robot_description/urdf/: test.urdf
lab5/ex05/movement/: package.xml
lab5/ex05/movement/movement/: movement.py
lab5/ex05/robot_description/urdf/: robot.urdf.xacro
lab6/ex02/: robot_depth.launch.py
lab6/ex04/robot_lidar/: package.xml  setup.py
lab6/ex05/robot_depth/: package.xml  setup.py
(+6 files in other folders)
