<?xml version="1.0"?>
<package format="3">
  <name>ex02</name>
  <version>0.0.0</version>
  <description>The ex02 package</description>
  <maintainer email="s.mendrul@gmail.com">chukotskiy_shaman</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
